2005-10-10  Billy Biggs  <vektor@dumbterm.net>

	* src/cairo.h: Call it CAIRO_EXTEND_PAD instead of
	CAIRO_EXTEND_NEAREST.

	* src/cairoint.h:
	* src/cairo-glitz-surface.c:
	(_cairo_glitz_pattern_acquire_surface):
	* src/cairo-image-surface.c (_cairo_image_surface_set_attributes):
	* src/cairo-pattern.c (_cairo_pattern_calc_color_at_pixel):
	* src/cairo-xcb-surface.c (_cairo_xcb_surface_set_attributes):
	* src/cairo-xlib-surface.c (_cairo_xlib_surface_set_attributes):
	Update everybody to use _PAD instead of _NEAREST.

2005-10-10  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-gstate.c (_cairo_gstate_fill): Transform source
	pattern for _cairo_surface_fill_path() also (#4673).

	* test/ps-surface.c, test/pdf-surface.c (draw): Use
	cairo_fill_preserve() instead of cairo_save()/cairo_restore().

	* src/cairo-pdf-surface.c (emit_surface_pattern): Add missing
	return values.
	
2005-10-10  Billy Biggs  <vektor@dumbterm.net>

	* src/cairo.h (cairo_extend_t): Add documentation for the
	extend modes.
	* src/cairo-pattern.c (cairo_pattern_set_extend),
	(cairo_pattern_get_extend): Document the extend functions
	for patterns.
	* src/cairo.c (cairo_copy_path): Remove some redundancy in
	the documentation.

2005-10-09  Keith Packard  <keithp@keithp.com>

	reviewed by: cworth

	* src/cairo-ps-surface.c: (_ps_output_add_fallback_area),
	(_ps_output_finish), (format_is_translucent),
	(surface_is_translucent), (gradient_is_translucent),
	(pattern_is_translucent), (operator_always_opaque),
	(operator_always_translucent), (color_operation_needs_fallback),
	(pattern_operation_needs_fallback), (_ps_output_fill_rectangles),
	(_ps_output_composite_trapezoids), (_ps_output_show_glyphs),
	(_ps_output_fill_path), (_ps_output_render_fallbacks),
	(_ps_output_surface_create):
	Switch fallback from list of rects to region.
	Check operator and patterns for non-ps drawing ability.
	Operators can sometimes be always opaque, independent of