@@ -1,3 +1,11 @@
+2005-10-11  Kristian Høgsberg  <krh@redhat.com>
+
+	* src/cairo-pdf-surface.c (emit_surface_pattern),
+	(emit_linear_colorgradient), (emit_stiched_colorgradient),
+	(emit_pattern_stops):
+	Implement non-uniformly spaced color stops for PDF gradients.
+	Patch from Jens Taprogge (#4722).
+
 2005-10-10  Billy Biggs  <vektor@dumbterm.net>
 
 	* src/cairo.h: Call it CAIRO_EXTEND_PAD instead of
